[gd_scene load_steps=6 format=3 uid="uid://dak5l6m7n8pap"]

[ext_resource type="PackedScene" uid="uid://b8j4k5l6m7n8o" path="res://Main.tscn" id="1_main"]
[ext_resource type="Script" path="res://ViewportInput.gd" id="2_input"]
[ext_resource type="Script" path="res://Table3D.gd" id="3_table"]
[ext_resource type="Texture2D" uid="uid://girl_png_uid" path="res://assets/girl.png" id="4_girl"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
resource_local_to_scene = true
shading_mode = 0
cull_mode = 2

[sub_resource type="QuadMesh" id="QuadMesh_1"]
size = Vector2(6, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(6, 10, 0.1)

[sub_resource type="LabelSettings" id="LabelSettings_res"]
font_size = 80
outline_size = 20
outline_color = Color(0, 0, 0, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.5)
shadow_offset = Vector2(5, 5)

[sub_resource type="LabelSettings" id="LabelSettings_info"]
font_size = 32
outline_size = 4
outline_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.5)

[node name="Table3D" type="Node3D"]
script = ExtResource("3_table")

[node name="SubViewport" type="SubViewport" parent="."]
size = Vector2i(600, 1000)
render_target_update_mode = 4

[node name="Main" parent="SubViewport" instance=ExtResource("1_main")]

[node name="Screen" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
mesh = SubResource("QuadMesh_1")
surface_material_override/0 = SubResource("StandardMaterial3D_1")

[node name="Area3D" type="Area3D" parent="Screen" node_paths=PackedStringArray("viewport", "mesh_instance")]
script = ExtResource("2_input")
viewport = NodePath("../../SubViewport")
mesh_instance = NodePath("..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Screen/Area3D"]
shape = SubResource("BoxShape3D_1")

[node name="CardTopMarker" type="Marker3D" parent="Screen"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.3, 0)

[node name="Camera3D" type="Camera3D" parent="."]
[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.8, -0.6, 0, 0.6, 0.8, 0, 6, 8)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 5, 0)

[node name="HUD" type="CanvasLayer" parent="."]

[node name="OpponentImage" type="TextureRect" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 320.0
grow_horizontal = 2
texture = ExtResource("4_girl")
expand_mode = 1
stretch_mode = 5

[node name="DialoguePanel" type="Panel" parent="HUD"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 250.0
offset_right = 100.0
offset_bottom = 350.0
grow_horizontal = 2

[node name="DialogueLabel" type="Label" parent="HUD/DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 16
text = "..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="InfoLabel" type="Label" parent="HUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -220.0
offset_right = 200.0
offset_bottom = -170.0
grow_horizontal = 2
grow_vertical = 0
text = "ターン: 1 / 3
スコア - あなた: 0  CPU: 0"
label_settings = SubResource("LabelSettings_info")
horizontal_alignment = 1



[node name="ResultLabel" type="Label" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
text = "カードを選んでください"
label_settings = SubResource("LabelSettings_res")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="HUD"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 80.0
offset_right = 100.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "もう一度遊ぶ"

